@@ -6,7 +6,6 @@
 	<string>require File.dirname(__FILE__) + '/../spec_helper'
 
 describe ${1:controller} do
-
   $0
 end</string>
 	<key>name</key>
