@@ -281,6 +281,7 @@
 		<string>240FDD9D-CD49-4917-9003-80A3E1DADFBA</string>
 		<string>B5906021-8E54-4863-A13B-EA46333DB5F1</string>
 		<string>67E726E0-63E2-4840-B8BB-37F665CD34B8</string>
+		<string>0C96C910-0A83-4AFE-AEF7-1F4882A00232</string>
 	</array>
 	<key>uuid</key>
 	<string>4CEA47CC-2C3A-45FB-80BE-3820828227C2</string>
