@@ -36,6 +36,7 @@ In alphabetical order (by last name)
 ** Patch to add --skip-migration option to rspec_scaffold generator
 * Ruy Asan
 ** Patch [#10698] Running with --drb executes specs twice (fix included)
+** Initial code for 'switch between source and spec file' command in Spec::Mate (Patch [#10791])
 * Sinclair Bain
 ** Patch [#11101] StringHelpers.starts_with?(prefix) assumes a string parameter for _prefix_
 * Ken Barker
